--- a/.gitignore
+++ b/.gitignore
@@ -151,3 +151,6 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 .DS_Store
+uploads/myimage1.png
+uploads/myimage2.png
+uploads/myimage3.png
